--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.PayEaseApp"
         tools:targetApi="31">
         <activity
+            android:name=".MobileRechargeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DthRecharge"
+            android:exported="false" />
+        <activity
+            android:name=".ElectricityRecharge"
+            android:exported="false" />
+        <activity
             android:name=".EditProfileActivity"
             android:exported="false" />
         <activity
